--- a/keycloak-react/package.json
+++ b/keycloak-react/package.json
@@ -48,6 +48,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "normalize.css": "^6.0.0",
+    "precss": "^1.4.0",
     "react": "^15.4.2",
     "react-datetime": "https://github.com/yourwafer/react-datetime.git#dd30e03",
     "react-datetime-slot": "https://github.com/dandankity/react-datetime-slot.git#d5a211c",
